base game working

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 
 <head>
 <link rel="stylesheet" href="main.css"/>
-<script src="jquery-1.12.3.min"></script>
+<script src="jquery-1.12.3.min.js"></script>
 <script src="app.js"></script>
 </head>
 
 <body>
+<div class="boxcontainer">
+
+</div>
+<div class="Qcontainer">
+</div>
+<div class="Acontainer">
+</div>
 </body>
 
 </html>
