--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html>
 
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link rel="stylesheet" href="main.css"/>
 <script src="jquery-1.12.3.min.js"></script>
 <script src="app.js"></script>
 </head>
 
 <body>
-<div class="boxcontainer">
+<div class="container">
+<div class="row">
+<div class="boxcontainer col-sm-12">
 
 </div>
-<div class="Qcontainer">
 </div>
-<div class="Acontainer">
+<div class="row">
+<div class="Qcontainer col-sm-6">
+</div>
+<div class="Acontainer col-sm-6">
+</div>
+</div>
 </div>
 </body>
 
