--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<meta charset="utf-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link rel="stylesheet" href="main.css"/>
 <script src="jquery-1.12.3.min.js"></script>
@@ -10,6 +11,7 @@
 
 <body>
 <div class="container">
+<h1 class="col-sm-8">CSS Colour Quiz</h1>
 <div class="row">
 <div class="boxcontainer col-sm-12">
 
